--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<title>Da Moby Dick all'Orsa Bianca</title>
 
 		 <!-- favicon -->
-    	<link rel="shortcut icon" href="img/favicon/favicon.ico"/>
-    	<!--foglio di stile css-->
+    		<link rel="shortcut icon" href="img/favicon/favicon.ico"/>
+    		<!--foglio di stile css-->
 		<link rel="stylesheet" type="text/css" href="stile-progetto.css">
 		<!--bootstrap CSS-->
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
@@ -50,8 +50,8 @@
 		                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 		                </li>
 		                <li class="nav-item">
-        					<a class="nav-link" href="#">Percorri il libro</a>
-      					</li>
+					<a class="nav-link" href="#">Percorri il libro</a>
+				</li>
 		                <li class="nav-item dropdown">
 		                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 		                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -103,7 +103,7 @@
 								    <p class="card-text pb-3">Una lista di tutti gli item del progetto ordinabili secondo un criterio alfabetico e un criterio cronologico.</p>
 								    <a href="#" class="btn btn-outline-primary btn-block btn-home">Vai alla lista</a>
 								  </div>
-								</div>
+							</div>
 		        			</div>
 		        			<div class="col-md-4">
 		        				<div class="card card-border" style="width: 18rem;">
@@ -112,7 +112,7 @@
 								    <p class="card-text pb-3">E' possibile navigare gli oggetti attraverso l'ordine dei capitoli del libro, per avere un'idea organica dell'opera e dei suoi artisti.</p>
 								    <a href="#" class="btn btn-outline-primary btn-block btn-home">Vai ai capitoli</a>
 								  </div>
-								</div>
+							</div>
 		        			</div>
 		        			<div class="col-md-4">
 		        				<div class="card card-border" style="width: 18rem;">
@@ -121,7 +121,7 @@
 								    <p class="card-text pb-3">E' possibile, inoltre, visitare i luoghi natii degli scrittori e delle loro opere citati nel libro attraverso una mappa.</p>
 								    <a href="#" class="btn btn-outline-primary btn-block btn-home">Vai alla mappa</a>
 								  </div>
-								</div>
+							</div>
 		        			</div>
 	        			</div>
         			</div>
@@ -154,45 +154,44 @@
 	        			<div class="col-md-12">
 	        				<!--card scrittrice e opera-->
 	        				<div class="card iframe-center" style="width: 54rem;">
-							  <div class="card-body">
+						  	<div class="card-body">
 							    <h2 class="text-center text-dark">La scrittrice e l'opera</h2>
 							    <h6 class="card-subtitle mb-2 text-muted">La scrittrice</h6>
-							    <p class="card-text">Anna Maria Ortese nacque a Roma il 13 giugno del 1914, figlia di Oreste Ortese, un funzionario prefettizio originario di Caltanissetta, e di Beatrice Vaccà, benestante napoletana discendente da una famiglia di scultori originari della Lunigiana. La scrittrice aveva cinque fratelli e una sorella, Maria, con la quale convivrà per tutta la vita. Nel gennaio del 1933 muore alla Martinica, cadendo da un'altezza mentre sistemava le vele dell'imbarcazione presso cui era impiegato, il fratello marinaio Emanuele. La perdita dell'amato fratello le lascia un dolore cupo, uno smarrimento che la spinge a scrivere. Pubblica infatti dopo alcuni mesi, sulla rivista L'Italia letteraria, alcune poesie che le valgono qualche elogio e il primo incoraggiamento a dedicarsi pienamente alla scrittura.
-
-								L'anno successivo, sempre per la stessa rivista, scrive il suo primo racconto, Pellerossa, "...dove è adombrato un tema fondamentale della mia vita: lo sgomento delle grandi masse umane, della civiltà senza più spazi e innocenza, dei grandi recinti dove saranno condotti gli uomini comuni". Nel 1937 l'editore Bompiani, dietro consiglio di Massimo Bontempelli, le pubblica la raccolta di racconti Angelici dolori, accolta con favore, ma anche da riserve, soprattutto da parte di Enrico Falqui e Giancarlo Vigorelli.<sup><b><a
-                                                href="https://it.wikipedia.org/wiki/Anna_Maria_Ortese" target="_blank"
-                                                title="Pagina Wikipedia di Anna Maria Ortese" class="link-blue">Wikipedia</a></b></sup></p></p>
+							    <p class="card-text">Anna Maria Ortese nacque a Roma il 13 giugno del 1914, figlia di Oreste Ortese, un funzionario prefettizio originario di Caltanissetta, e di Beatrice Vaccà, benestante napoletana discendente da una famiglia di scultori originari della Lunigiana. La scrittrice aveva cinque fratelli e una sorella, Maria, con la quale convivrà per tutta la vita. Nel gennaio del 1933 muore alla Martinica, cadendo da un'altezza mentre sistemava le vele dell'imbarcazione presso cui era impiegato, il fratello marinaio Emanuele. La perdita dell'amato fratello le lascia un dolore cupo, uno smarrimento che la spinge a scrivere. Pubblica infatti dopo alcuni mesi, sulla rivista L'Italia letteraria, alcune poesie che le valgono qualche elogio e il primo incoraggiamento a dedicarsi pienamente alla scrittura. L'anno successivo, sempre per la stessa rivista, scrive il suo primo racconto, Pellerossa, "...dove è adombrato un tema fondamentale della mia vita: lo sgomento delle grandi masse umane, della civiltà senza più spazi e innocenza, dei grandi recinti dove saranno condotti gli uomini comuni". Nel 1937 l'editore Bompiani, dietro consiglio di Massimo Bontempelli, le pubblica la raccolta di racconti Angelici dolori, accolta con favore, ma anche da riserve, soprattutto da parte di Enrico Falqui e Giancarlo Vigorelli.<sup><b><a
+                                              				href="https://it.wikipedia.org/wiki/Anna_Maria_Ortese" target="_blank" title="Pagina Wikipedia di Anna Maria Ortese" class="link-blue">Wikipedia</a></b></sup></p>
 							    <h6 class="card-subtitle mb-2 text-muted">L'opera</h6>
 							    <p class="card-text"><em>Da Moby Dick all'ora bianca</em> è un'opera postuma che raccoglie varie recensioni di opere e artisti visti e raccontati con lo sguardo di Anna Maria Ortese. Uno sguardo che, come anche nei romanzi, indica l'assoluto connubio tra amore e ansiosa angoscia per il mondo e gli esseri viventi che lo popolano. Ortese sa entrare in profondità negli autori di cui parla usando i piccoli interstizi offerti dalle loro opere: Hemingway diventa così "un pezzo di cielo e una fitta di sole". Il libro, oltre a essere uno strumento di conoscenza di questi artisti attraverso gli occhi di Ortese, diventa anche un modo per conoscere ancora più a fondo l'incredibile sensibilità, quasi metafisica, con la quale l'autrice percepisce la vita, l'arte e l'essere umano. </p>
 							    <button type="button" class="btn mt-4 btn-home">Approfondisci</button>
+							</div>
+						</div>
 	    					    <div class="row pt-5">
 							    	<div class="col md-4">
 							    		<div class="card card-ortese">
 							  				<img src="immagini/ritratto-ortese.png" class="card-img-top" alt="Ritratto di Anna Maria Ortese">
 											  <div class="card-body">
-											    <div class="card-metadata">
+										    		<div class="card-metadata">
 													<h5 class="card-title">Anna Maria Ortese</h5>
 													<p class="card-text">Attività: scrittrice</p>
 													<p class="card-text pb-3">Controllo autorità: <a href="http://viaf.org/viaf/9872957" alt="AnnaMariaOrtese">Ortese, Anna Maria<sup>VIAF</sup></a>.</p>
-										    	</div>
-											    <a href="#" class="btn btn-outline-primary btn-block btn-home">Tutti i metadati</a>
+										    		</div>
+										    		<a href="#" class="btn btn-outline-primary btn-block btn-home">Tutti i metadati</a>
 											  </div>
-										</div>
+									</div>
 							    	</div>
 							    	<div class="col-md-4">
 							    	</div>
 							    	<div class="col md-4">
 							    		<div class="card card-ortese">
-							  				<img src="immagini/foto-libro.jpg" class="card-img-top" alt="Ritratto di Anna Maria Ortese">
-											  <div class="card-body">
-											    <div class="card-metadata">
-													<h5 class="card-title">Da Moby Dick all'Orsa Bianca</h5>
-													<p class="card-text">Curatrice: <a href=" http://viaf.org/viaf/81082946" alt="AnnaMariaOrtese">Monica Farnetti<sup>VIAF</sup></a>.</p>
-													<p class="card-text pb-3">ISBN: 9788845926167</p>
-										    	</div>
-											    <a href="#" class="btn btn-outline-primary btn-block btn-home">Tutti i metadati</a>
-											  </div>
-										</div>
+										<img src="immagini/foto-libro.jpg" class="card-img-top" alt="Ritratto di Anna Maria Ortese">
+										  <div class="card-body">
+											<div class="card-metadata">
+												<h5 class="card-title">Da Moby Dick all'Orsa Bianca</h5>
+												<p class="card-text">Curatrice: <a href=" http://viaf.org/viaf/81082946" alt="AnnaMariaOrtese">Monica Farnetti<sup>VIAF</sup></a>.</p>
+												<p class="card-text pb-3">ISBN: 9788845926167</p>
+											</div>
+											<a href="#" class="btn btn-outline-primary btn-block btn-home">Tutti i metadati</a>
+										  </div>
+									</div>
 							    	</div>	
 							    </div>
 							    <hr>
@@ -222,9 +221,9 @@
 					</div>
 				</div>
 			</section>
-			 <div class="container-fluid background-light">
-            	<p class="mb-0 pb-1 pt-1 text-center">© Copyright (c) 2021 Monica Valentini - Progetto di Digital Humanities - Italianistica - Alma Mater Studiorum università di Bologna</p>
-        	</div>
+	 		<div class="container-fluid background-light">
+            			<p class="mb-0 pb-1 pt-1 text-center">© Copyright (c) 2021 Monica Valentini - Progetto di Digital Humanities - Italianistica - Alma Mater Studiorum università di Bologna</p>
+			</div>
 		</footer>
 
 		<!--richiamo a Jquery-->
