--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 						
 	    					    	<div class="row pt-5">
 							    	<div class="col md-4">
-							    		<div class="card card-ortese">
+							    		<div class="card card-ortese ml-3">
 							  				<img src="immagini/ritratto-ortese.png" class="card-img-top" alt="Ritratto di Anna Maria Ortese">
 											  <div class="card-body">
 										    		<div class="card-metadata">
@@ -181,7 +181,7 @@
 							    	<div class="col-md-4">
 							    	</div>
 							    	<div class="col md-4">
-							    		<div class="card card-ortese">
+							    		<div class="card card-ortese mr-3">
 										<img src="immagini/foto-libro.jpg" class="card-img-top" alt="Ritratto di Anna Maria Ortese">
 										  <div class="card-body">
 											<div class="card-metadata">
