--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		        				<div class="card card-border" style="width: 18rem;">
 								  <div class="card-body">
 								    <h5 class="card-title"><i class="bi bi-book pr-2"></i>Per capitolo</h5>
-								    <p class="card-text pb-3">E' possibile navigare gli oggetti attraverso l'ordine dei capitoli del libro, per avere un'idea organica dell'opera e dei suoi artisti.</p>
+								    <p class="card-text pb-3">È possibile navigare gli oggetti attraverso l'ordine dei capitoli del libro, per avere un'idea organica dell'opera e dei suoi artisti.</p>
 								    <a href="#" class="btn btn-outline-primary btn-block btn-home">Vai ai capitoli</a>
 								  </div>
 							</div>
@@ -118,7 +118,7 @@
 		        				<div class="card card-border" style="width: 18rem;">
 								  <div class="card-body">
 								    <h5 class="card-title"><i class="bi bi-map pr-2"></i>Per luogo</h5>
-								    <p class="card-text pb-3">E' possibile, inoltre, visitare i luoghi natii degli scrittori e delle loro opere citati nel libro attraverso una mappa.</p>
+								    <p class="card-text pb-3">È possibile, inoltre, visitare i luoghi natii degli scrittori e delle loro opere citati nel libro attraverso una mappa.</p>
 								    <a href="#" class="btn btn-outline-primary btn-block btn-home">Vai alla mappa</a>
 								  </div>
 							</div>
