--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta name="DC.Date" content="3/11/2021">
 		<meta name="DC.Type" content="Sito web">
 		<meta name="DC.Format" content="HTML/CSS/JS/XML">
-		<meta name="DC.Identifier" href="">
+		<link rel="DC.Identifier" href="https://monica-valentini.github.io/Da-Moby-Dick-all-Orsa-Bianca/">
 		<meta name="DC.Source" content="https://storymap.knightlab.com/">
 		<meta name="DC.Language" content="it">
 		<meta name="DC.Rights" content="http://creativecommons.org/licenses/by-nc-sa/4.0/">
