--- a/lista.html
+++ b/lista.html
@@ -62,7 +62,7 @@
 					    </div>
 					</li>
 					<li class="nav-item">
-					    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Persone</a>
+					    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Autori</a>
 					</li>
 				    </ul>
 				    <form class="form-inline my-2 my-lg-0">
