--- a/persona.html
+++ b/persona.html
@@ -163,7 +163,7 @@
 							</div>
 							<!-- introduzione -->
 							<div class="card-header pt-4">
-								<p class="text-justify text-dark">Introduzione: Jusepe de Ribera, conosciuto anche come José de Ribera, o col soprannome Spagnoletto (Xàtiva, 17 febbraio 1591 – Napoli, 2 settembre 1652), è stato un pittore spagnolo, attivo principalmente a Napoli e più in generale per la corte di Spagna.<sup><b><a
+								<p class="text-justify text-dark"><em>Jusepe de Ribera, conosciuto anche come José de Ribera, o col soprannome Spagnoletto (Xàtiva, 17 febbraio 1591 – Napoli, 2 settembre 1652), è stato un pittore spagnolo, attivo principalmente a Napoli e più in generale per la corte di Spagna.</em><sup><b><a
 									href="https://it.wikipedia.org/wiki/Jusepe_de_Ribera" target="_blank"
 									title="Pagina Wikipedia di Jusepe de Ribera" class="link-blue">Wikipedia</a></b></sup>
 								</p>
