--- a/lista.html
+++ b/lista.html
@@ -226,13 +226,13 @@
 								    <a class="nav-link" href="#">Testi in prosa</a>
 								  </li>
 								  <li class="nav-item">
-								    <a class="nav-link" href="#">Testi in poesia</a>
+								    <a class="nav-link" href="#">Testi poetici</a>
 								  </li>
 								  <li class="nav-item">
-								    <a class="nav-link" href="#">Opere teatrali</a>
+								    <a class="nav-link" href="#">Testi teatrali</a>
 								  </li>
 								  <li class="nav-item">
-								    <a class="nav-link" href="#">Dipinti</a>
+								    <a class="nav-link" href="#">Opere artistiche</a>
 								  </li>
 								</ul>
 							</div>
