--- a/persona.html
+++ b/persona.html
@@ -225,7 +225,7 @@
 								    </li>
 								</ul>
 								<hr>
-								<h3 class="text-center text-dark">Oggetti catalogati correlati</h3>
+								<h3 class="text-center text-dark">Nello stesso capitolo</h3>
 								<div class="row pt-3">
 									<div class="col-md-4">
 										<div class="card card-related-item card-border">
